rbx_dom_weak/src/snapshots/rbx_dom_weak__dom__test__clone_into_external.snap
---
source: rbx_dom_weak/src/dom.rs
expression: viewer.view(&dom)
---
referent: referent-0
name: Root
class: Folder
properties: {}
children:
  - referent: referent-1
    name: Part
    class: Part
    properties:
      RefProp: referent-2
    children: []
  - referent: referent-2
    name: Part
    class: Part
    properties:
      RefProp: referent-1
    children: []

