rbx_dom_weak/src/snapshots/rbx_dom_weak__dom__test__transfer.snap
---
source: rbx_dom_weak/src/dom.rs
expression: viewer.view_children(&source)
---
- referent: referent-0
  name: Target
  class: Folder
  properties: {}
  children:
    - referent: referent-1
      name: Some Child
      class: Part
      properties: {}
      children: []
