rbx_dom_weak/src/snapshots/rbx_dom_weak__dom__test__transfer_within.snap
---
source: rbx_dom_weak/src/dom.rs
expression: viewer.view_children(&dom)
---
- referent: referent-0
  name:
    Utf8:
      - Source
  class: Folder
  properties: {}
  children:
    - referent: referent-1
      name:
        Utf8:
          - Root
      class: Folder
      properties: {}
      children:
        - referent: referent-2
          name:
            Utf8:
              - SpawnLocation
          class: SpawnLocation
          properties: {}
          children: []
- referent: referent-3
  name:
    Utf8:
      - Dest
  class: Folder
  properties: {}
  children: []
